fixes padding of images and iframe on mobile

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -130,6 +130,10 @@ h1{
 	@media #{$tablet}{
 		padding-left: 10%;
 	}
+	iframe, .left, .right{
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 .event-infos{
